tidy up models
