# docs/swagger.yaml
@@ -1,4 +1,25 @@
 definitions:
+  dtos.GetTeamStatisticsDTO:
+    properties:
+      draws:
+        type: integer
+      gamesPlayed:
+        type: integer
+      goalDifference:
+        type: integer
+      goalsConceded:
+        type: integer
+      goalsScored:
+        type: integer
+      losses:
+        type: integer
+      points:
+        type: integer
+      team:
+        type: string
+      wins:
+        type: integer
+    type: object
   dtos.UpdateFixtureDTO:
     properties:
       awayScore:
@@ -52,31 +73,6 @@ definitions:
       stadium:
         type: string
       stadiumCapacity:
-        type: integer
-    type: object
-  models.TeamStatistics:
-    properties:
-      draws:
-        type: integer
-      gamesPlayed:
-        type: integer
-      goalDifference:
-        type: integer
-      goalsConceded:
-        type: integer
-      goalsScored:
-        type: integer
-      lastUpdated:
-        type: string
-      losses:
-        type: integer
-      points:
-        type: integer
-      team:
-        type: string
-      teamId:
-        type: string
-      wins:
         type: integer
     type: object
 info:
@@ -156,7 +152,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.TeamStatistics'
+              $ref: '#/definitions/dtos.GetTeamStatisticsDTO'
             type: array
       summary: Get standings
       tags:
